Create random words

--- a/res/data/vnDB/fix_words.ipynb
+++ b/res/data/vnDB/fix_words.ipynb
@@ -66,6 +66,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 205999/205999 [00:22<00:00, 9111.96it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"wrong_words.txt\"\n",
+    "save_labels = \"all_labels.txt\"\n",
+    "with open(path, 'r', encoding='utf8') as f:\n",
+    "    lines = f.readlines()\n",
+    "    for i, line in tqdm.tqdm(enumerate(lines), total=len(lines)):\n",
+    "        split_line = line.split()\n",
+    "        if len(split_line) > 0:\n",
+    "            file_name, status, file_name2, label = split_line\n",
+    "            if i == 0:\n",
+    "                with open(save_labels, 'w', encoding='utf8') as f2:\n",
+    "                    f2.write(f\"{label}\\n\")\n",
+    "            elif i == len(lines) - 1:\n",
+    "                with open(save_labels, 'a', encoding='utf8') as f2:\n",
+    "                    f2.write(f\"{label}\")                \n",
+    "            else:\n",
+    "                with open(save_labels, 'a', encoding='utf8') as f2:\n",
+    "                    f2.write(f\"{label}\\n\")\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
